--- a/public/css/homeserv.css
+++ b/public/css/homeserv.css
@@ -1,4 +1,3 @@
-
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
 }
@@ -14,10 +13,14 @@ ul {
     padding:0 0 0 0;
     margin:0 0 0 0;
 }
-ul li {
+.image-row ul li {
     list-style:none;
     margin-bottom:25px;
 }
 ul li img {
     cursor: pointer;
+}
+.img-container{
+  text-align: center;
+	font-size: 10px;
 }
