--- a/public/css/homeserv.css
+++ b/public/css/homeserv.css
@@ -1,5 +1,4 @@
-body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
+.homeserv-nav{
 }
 
 .thumb {
