more bug fixes - fixed initial load sort by date issue

--- a/public/css/homeserv.css
+++ b/public/css/homeserv.css
@@ -12,6 +12,10 @@ ul {
     padding:0 0 0 0;
     margin:0 0 0 0;
 }
+.image-row {
+	margin-top: 75px;
+}
+
 .image-row ul li {
     list-style:none;
     margin-bottom:25px;
